# asciidoc-rs

./: .gitignore  Cargo.toml  README.adoc  asciidoc-rs.code-workspace
schemas/: relaxng.ebnf  relaxng.rnc
src/: lib.rs
src/docbook/: mod.rs
src/relaxng/: error.rs  errors.rs  mod.rs  parser.rs  tests.rs
src/relaxng/parser/: common.rs  declarations.rs  grammar.rs  helpers.rs  identifiers.rs  mod.rs  names.rs  namespaces.rs  pattern.rs  tests.rs
src/relaxng/tests/: declarations.rs  grammar.rs  identifiers.rs  mod.rs  namespaces.rs
tests/: common.rs  docbook.rs  hello_world.rs  relaxng.rs
tests/samples/: chapter-a.xml  child-include.xml  doctime-localtime.xml  encoding.xml  file-with-missing-include.xml  file-with-utf8-bom.xml  grandchild-include.xml  hello_world.md  include-file.xml  include-with-leading-blank-line.xml  lists.xml  main.xml  mismatched-end-tag.xml  other-chapters.xml  outer-include.xml  parent-include-restricted.xml  parent-include.xml  sample.xml  section-a.xml  source-block.xml  subs.xml  unclosed-tag.xml  unexpected-end-tag.xml
tests/schemas/: incremental.rng.xml  relaxng_3_1.rng.xml  relaxng_3_1.txt  test_suite.rng.xml
