[package]
name = "asciidoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"

lazy_static = "1"

nom = "7"
nom_locate = "4"

log = "0.4"

serde-xml-rs = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
xmlns = "0.1.1"
url = { version = "2.3.1", features = ["serde"] }
derive_builder = "0.11.2"


[dev-dependencies]
ctor = "0.1"
walkdir = "2"
pathdiff = "0.2"
indoc = "1.0.7"
