[package]
name = "asciidoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
lazy_static = "1"
log = "0.4"
colored = "2"

xmlns = "0.1"
url = { version = "2", features = ["serde"] }
derive_builder = "0.12"
thiserror = "1"
serde_with = "2"
codegen = "0.2"
convert_case = "0.6"
anyhow = "1"


nom = "7"
nom_locate = "4"
regex = "1.7.0"


[dev-dependencies]
ctor = "0.1"
walkdir = "2"
pathdiff = "0.2"
indoc = "1"
pretty_assertions = "1"
